--- a/development.ini
+++ b/development.ini
@@ -65,7 +65,7 @@ handlers =
 qualname = fplan
 
 [logger_sqlalchemy]
-level = INFO
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
