--- a/development.ini
+++ b/development.ini
@@ -20,6 +20,8 @@ use = egg:fplan
 full_stack = true
 static_files = true
 
+preload_aerodrome_info = true
+
 cache_dir = %(here)s/data
 beaker.session.key = fplan
 beaker.session.secret = somesecret
