Working segmentation of map

--- a/development.ini
+++ b/development.ini
@@ -20,7 +20,8 @@ use = egg:fplan
 full_stack = true
 static_files = true
 
-preload_aerodrome_info = true
+#preload_aerodrome_info = true
+preload_aerodrome_info = false
 
 cache_dir = %(here)s/data
 beaker.session.key = fplan
