--- a/development.ini
+++ b/development.ini
@@ -22,7 +22,7 @@ static_files = true
 
 #preload_aerodrome_info = true
 preload_aerodrome_info = false
-
+tile_dir=/home/anders/saker/avl_fplan_world/
 cache_dir = %(here)s/data
 beaker.session.key = fplan
 beaker.session.secret = somesecret
