--- a/development.ini
+++ b/development.ini
@@ -34,7 +34,11 @@ beaker.session.secret = somesecret
 #beaker.session.data_dir = %(here)s/data/sessions
 
 # SQLAlchemy database URL
-sqlalchemy.url = sqlite:///%(here)s/development.db
+#sqlalchemy.url = sqlite:///%(here)s/development.db
+sqlalchemy.url = postgres://flightplanner@localhost/flightplanner
+sqlalchemy.max_overflow = 2
+sqlalchemy.pool_size = 1
+
 
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
