--- a/development.ini
+++ b/development.ini
@@ -72,7 +72,7 @@ handlers =
 qualname = fplan
 
 [logger_sqlalchemy]
-level = WARN
+level = INFO
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
