--- a/production.ini
+++ b/production.ini
@@ -4,9 +4,9 @@
 # The %(here)s variable will be replaced with the parent directory of this file
 #
 [DEFAULT]
-debug = true
+debug = false
 # Uncomment and replace with the address which should receive any error reports
-#email_to = you@yourdomain.com
+email_to = anders.musikka@gmail.com 
 smtp_server = localhost
 error_email_from = paste@localhost
 
