Support for downloadable bitmap maps for android app

--- a/development.ini
+++ b/development.ini
@@ -34,7 +34,7 @@ beaker.session.secret = somesecret
 
 # SQLAlchemy database URL
 #sqlalchemy.url = sqlite:///%(here)s/development.db
-sqlalchemy.url = postgres://flightplanner@localhost/flightplanner
+sqlalchemy.url = postgresql://flightplanner@localhost/flightplanner
 sqlalchemy.max_overflow = 12
 sqlalchemy.pool_size = 10
 
