Changes to make email error notifications work better and be testable

--- a/production.ini
+++ b/production.ini
@@ -8,7 +8,7 @@ debug = false
 # Uncomment and replace with the address which should receive any error reports
 email_to = anders.musikka@gmail.com 
 smtp_server = localhost
-error_email_from = paste@localhost
+error_email_from = paste@swflightplanner.se
 
 [server:main]
 use = egg:Paste#http
