--- a/development.ini
+++ b/development.ini
@@ -50,14 +50,20 @@ sqlalchemy.pool_size = 10
 keys = root, routes, fplan, sqlalchemy
 
 [handlers]
-keys = console
+keys = console, disklog
+
+[handler_disklog]
+class = logging.handlers.RotatingFileHandler
+args = ('disklog.txt','a')
+level = WARN
+formatter = generic
 
 [formatters]
 keys = generic
 
 [logger_root]
 level = INFO
-handlers = console
+handlers = console, disklog
 
 [logger_routes]
 level = INFO
