--- a/production.ini
+++ b/production.ini
@@ -8,7 +8,7 @@ debug = false
 # Uncomment and replace with the address which should receive any error reports
 email_to = anders.musikka@gmail.com 
 smtp_server = localhost
-error_email_from = paste@localhost
+error_email_from = paste@swflightplanner.se
 
 [server:main]
 use = egg:Paste#http
@@ -50,14 +50,21 @@ sqlalchemy.pool_size = 10
 keys = root, routes, fplan, sqlalchemy
 
 [handlers]
-keys = console
+keys = console, disklog
+
+[handler_disklog]
+class = logging.handlers.RotatingFileHandler
+args = ('disklog.txt','a')
+level = WARN
+formatter = generic
+
 
 [formatters]
 keys = generic
 
 [logger_root]
 level = INFO
-handlers = console
+handlers = console, disklog
 
 [logger_routes]
 level = INFO
