INcrease to 20 worker threads

--- a/production.ini
+++ b/production.ini
@@ -10,10 +10,13 @@ email_to = anders.musikka@gmail.com
 smtp_server = localhost
 error_email_from = paste@swflightplanner.se
 
+
 [server:main]
 use = egg:Paste#http
 host = 0.0.0.0
 port = 80
+threadpool_workers=20
+
 
 [app:main]
 use = egg:fplan
@@ -35,8 +38,8 @@ beaker.session.secret = somesecret
 # SQLAlchemy database URL
 #sqlalchemy.url = sqlite:///%(here)s/development.db
 sqlalchemy.url = postgres://flightplanner@localhost/flightplanner
-sqlalchemy.max_overflow = 12
-sqlalchemy.pool_size = 10
+sqlalchemy.max_overflow = 20
+sqlalchemy.pool_size = 18
 
 
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
