Fix bug with certain destinations and endelev

--- a/production.ini
+++ b/production.ini
@@ -45,7 +45,7 @@ sqlalchemy.pool_size = 18
 # WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
 # Debug mode will enable the interactive debugging tool, allowing ANYONE to
 # execute malicious code after an exception is raised.
-#set debug = false
+set debug = false
 
 
 # Logging configuration
